--- a/mikiyas.css
+++ b/mikiyas.css
@@ -151,10 +151,18 @@ a#button {
     justify-content: center;
     align-items: center;
     top: 23em;
-    background-color: #342738;
+    background-color: #402249;
     color: white;
     padding: 1.2em;
+    transition: 0.3s;
+}
+
+a#button:hover {
     border-radius: 45%;
+    background-color: pink;
+    color: black;
+    transform: translateY(-5px); 
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
 }
 
 /*
