--- a/mikiyas.css
+++ b/mikiyas.css
@@ -103,6 +103,14 @@ body {
     border-radius: 50%;
 }
 
+.card .img img:hover{
+    transition-duration: 2s;
+    transform:perspective(15em) rotateY(1turn);
+    backface-visibility: hidden;
+    
+}
+
+
 .card .img img {
     width: 140px;
     height: 140px;
